# triseps

./: .flake8  .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  unittest.yml  upload_pypi.yml  upload_testpypi.yml
docs/: index.md  requirements.txt
docs/assets/stylesheets/: local.css
docs/css/: local.css
docs/inst/: cmos.md  header.md  index.md  nonsidereal.md  overview.md
docs/reference/: database.md  tripre.md  trired.md  triview.md  triwcs.md
docs/tutorial/: index.md  preparation.md  reduction.md
tests/: __init__.py
tricceps/: version.py
triseps/: __init__.py  assertion.py  astrometry.py  compile.py  dark.py  database.py  flat.py  sanity_check.py  utils.py  version.py  warnings.py
